Fix padding on mobile

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body, html {
 
 @media screen and (max-width: 800px) {
    .hero-image{
-    height:90%
+    height:80%
 }
 
 }
